--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3"
   },
-   "engines" : { "npm" : "^1.0.20",
+   "engines" : { "npm" : "3.10.9",
                "node": "7.2.0"
                } ,
    "os" : [ "win32" ]
