--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular2-express-slim",
-  "description": "Starter application of Angular2 and Express",
-  "repository": "https://github.com/vladotesanovic/angular2-express-slim",
-  "keywords": ["angular2", "express", "node"]
+  "name": "Destiny >>",
+  "description": "application of Angular2 and Express",
+  "repository": "https://github.com/prems021/adminpanel",
+  "keywords": ["angular2", "express", "node","destiny"]
 }
